--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -7,7 +7,7 @@ SITE_HOSTNAME=githubcities.arm1.nemanjamitic.com
 
 # Backend
 PROJECT_NAME=Githubcities
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://lgithubcities.arm1.nemanjamitic.com"
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://api.githubcities.arm1.nemanjamitic.com"
 SECRET_KEY=secret
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=password
