--- a/apps/githubcities/.gitignore
+++ b/apps/githubcities/.gitignore
@@ -3,19 +3,19 @@
 .env
 
 # ignore cache
-!data/cache
-data/cache/*
-!data/cache/.gitkeep
+!backend/data/cache
+backend/data/cache/*
+!backend/data/cache/.gitkeep
 
 # ignore database
-!data/database
-data/database/*
-!data/database/.gitkeep
+!backend/data/database
+backend/data/database/*
+!backend/data/database/.gitkeep
 
 # ignore app logs
-!data/logs
-data/logs/*
-!data/logs/.gitkeep
+!backend/data/logs
+backend/data/logs/*
+!backend/data/logs/.gitkeep
 
 # backup is in git
 
