add NEXT_PUBLIC_API_URL in githubcities

--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -4,8 +4,13 @@ SITE_HOSTNAME=githubcities.arm1.nemanjamitic.com
 # Todo: separate to .env, .env.frontend, .env.backend
 
 # Frontend
+# frontend/apps/web/.env
+NEXT_PUBLIC_API_URL=https://api.githubcities.arm1.nemanjamitic.com
+NEXTAUTH_SECRET=my-secret
+NODE_ENV=production
 
 # Backend
+# .env
 PROJECT_NAME=Githubcities
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://api.githubcities.arm1.nemanjamitic.com"
 SECRET_KEY=secret
@@ -13,6 +18,7 @@ FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=password
 
 # Postgres
+# .env
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5433 # must be free on host
 POSTGRES_DB=app
