add adminer, fix db host env var

--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -6,7 +6,6 @@ SITE_HOSTNAME=githubcities.arm1.nemanjamitic.com
 # Frontend
 # frontend/apps/web/.env
 NEXT_PUBLIC_API_URL=https://api.githubcities.arm1.nemanjamitic.com
-NEXTAUTH_SECRET=my-secret
 NODE_ENV=production
 
 # Backend
@@ -19,8 +18,8 @@ FIRST_SUPERUSER_PASSWORD=password
 
 # Postgres
 # .env
-POSTGRES_SERVER=localhost
-POSTGRES_PORT=5433 # must be free on host
+POSTGRES_SERVER=database
+POSTGRES_PORT=5432 # if exposed must be free on host
 POSTGRES_DB=app
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
