--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -11,7 +11,8 @@ NODE_ENV=production
 # Backend
 # .env
 PROJECT_NAME=Githubcities
-BACKEND_CORS_ORIGINS="https://localhost,https://api.githubcities.arm1.nemanjamitic.com"
+# frontend urls
+BACKEND_CORS_ORIGINS="https://localhost,https://githubcities.arm1.nemanjamitic.com"
 SECRET_KEY=secret
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=password
