--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -6,6 +6,7 @@ SITE_HOSTNAME=githubcities.arm1.nemanjamitic.com
 
 # Frontend
 # frontend/apps/web/.env
+NEXT_PUBLIC_SITE_URL=https://githubcities.arm1.nemanjamitic.com
 NEXT_PUBLIC_API_URL=https://api.githubcities.arm1.nemanjamitic.com
 NODE_ENV=production
 
