update secret env

--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -15,7 +15,8 @@ NODE_ENV=production
 PROJECT_NAME=Githubcities
 # frontend urls
 BACKEND_CORS_ORIGINS="https://localhost,https://githubcities.arm1.nemanjamitic.com"
-SECRET_KEY=secret
+JWT_SECRET_KEY=secret
+SESSION_SECRET_KEY=secret
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=password
 
