--- a/core/docker-compose.local.yml
+++ b/core/docker-compose.local.yml
@@ -54,7 +54,7 @@ services:
 
 
   portainer:
-    image: 'portainer/portainer-ce'
+    image: portainer/portainer-ce:latest
     container_name: portainer
     restart: unless-stopped
     security_opt:
