--- a/core/.env.example
+++ b/core/.env.example
@@ -1,6 +1,6 @@
 # this is just used for traefik and portainer
 # same as any other container
-SITE_HOSTNAME=arm1.localhost3002.live
+SITE_HOSTNAME=arm1.nemanjamitic.com
 
 # must put value in quotes "..." and escape $ with \$
 TRAEFIK_AUTH=
