upgrade traefik to 3.6.0

--- a/core/docker-compose.remote.yml
+++ b/core/docker-compose.remote.yml
@@ -2,7 +2,8 @@ version: '3.9'
 
 services:
   traefik:
-    image: 'traefik:v2.9.8'
+    # image: traefik:v2.9.8
+    image: traefik:v3.6.0
     container_name: traefik
     restart: unless-stopped
     command:
