--- a/core/docker-compose.local.yml
+++ b/core/docker-compose.local.yml
@@ -19,7 +19,8 @@ services:
       - proxy
 
   traefik:
-    image: 'traefik:v2.9.8'
+    # image: traefik:v2.9.8
+    image: traefik:v3.6.0
     container_name: traefik
     restart: unless-stopped
     depends_on:
