add cookie expiration env

--- a/apps/githubcities/.env.example
+++ b/apps/githubcities/.env.example
@@ -17,6 +17,8 @@ PROJECT_NAME=Githubcities
 BACKEND_CORS_ORIGINS="https://localhost,https://githubcities.arm1.nemanjamitic.com"
 JWT_SECRET_KEY=secret
 SESSION_SECRET_KEY=secret
+# 8 days = 60 * 24 * 8 = 11520 minutes
+ACCESS_TOKEN_EXPIRE_MINUTES=11520
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=password
 
