update fastapi nextjs env.example

--- a/apps/full-stack-fastapi-template-nextjs/.env.example
+++ b/apps/full-stack-fastapi-template-nextjs/.env.example
@@ -1,32 +1,58 @@
-# Traefik (docker-compose.yml)
+# --------------- Traefik vars ---------------
+
+# docker-compose.yml
 SITE_HOSTNAME=full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
 
+# --------- Frontend AND Backend vars ---------
 
-# Todo: separate to .env, .env.frontend, .env.backend
-
-# Frontend
-# frontend/apps/web/.env
 NEXT_PUBLIC_SITE_URL=https://full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
+
+# --------------- Frontend vars ---------------
+
+# frontend/apps/web/.env
 NEXT_PUBLIC_API_URL=https://api.full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
 NODE_ENV=production
 
-# Backend
-# .env
-PROJECT_NAME=Githubcities
-# frontend urls
-BACKEND_CORS_ORIGINS="https://localhost,https://full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com"
+# --------------- Backend vars ---------------
+
+# Title
+PROJECT_NAME="Full stack FastAPI template Next.js"
+
+# Frontend
+# Whitelisted frontend urls
+BACKEND_CORS_ORIGINS="http://localhost,https://localhost,http://localhost:3000,https://localhost:3000,http://localhost:3001,https://localhost:3001,https://full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com,https://full-stack-fastapi-template-nextjs.rpi.nemanjamitic.com,https://full-stack-fastapi-template-nextjs.opi.nemanjamitic.com"
+
+# Environment: local, staging, production
+ENVIRONMENT=production
+
+# Auth
 JWT_SECRET_KEY=secret
 SESSION_SECRET_KEY=secret
-# 8 days = 60 * 24 * 8 = 11520 minutes
-ACCESS_TOKEN_EXPIRE_MINUTES=11520
+# 8 days = 24 * 8 = 192 hours
+ACCESS_TOKEN_EXPIRE_HOURS=192
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=password
 
+# Github OAuth
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
 # Postgres
-# .env
 POSTGRES_SERVER=database
-POSTGRES_PORT=5432 # if exposed must be free on host
+POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
+
+# Emails
+SMTP_HOST=
+SMTP_USER=
+SMTP_PASSWORD=
+EMAILS_FROM_EMAIL=info@example.com
+SMTP_TLS=True
+SMTP_SSL=False
+SMTP_PORT=587
+
+# Sentry
+SENTRY_DSN=
 
