remove NEXT_PUBLIC_

--- a/apps/full-stack-fastapi-template-nextjs/.env.example
+++ b/apps/full-stack-fastapi-template-nextjs/.env.example
@@ -5,12 +5,12 @@ SITE_HOSTNAME=full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
 
 # --------- Frontend AND Backend vars ---------
 
-NEXT_PUBLIC_SITE_URL=https://full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
+SITE_URL=https://full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
 
 # --------------- Frontend vars ---------------
 
 # frontend/apps/web/.env
-NEXT_PUBLIC_API_URL=https://api.full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
+API_URL=https://api.full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
 NODE_ENV=production
 
 # --------------- Backend vars ---------------
