update env.example too

--- a/apps/full-stack-fastapi-template-nextjs/.env.example
+++ b/apps/full-stack-fastapi-template-nextjs/.env.example
@@ -10,7 +10,7 @@ SITE_URL=https://full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
 # --------------- Frontend vars ---------------
 
 # frontend/apps/web/.env
-API_URL=https://api.full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
+API_URL=https://api-full-stack-fastapi-template-nextjs.arm1.nemanjamitic.com
 NODE_ENV=production
 
 # --------------- Backend vars ---------------
