--- a/apps/mybb/docker-compose.yml
+++ b/apps/mybb/docker-compose.yml
@@ -3,10 +3,19 @@ version: '3.9'
 services:
 
   mybb:
-    image: mybb/mybb:1.8.37
+    # image: mybb/mybb:1.8.39
     container_name: mybb
-    command: --skip-old-files php-fpm
     restart: unless-stopped
+    build:
+      context: ./docker
+      dockerfile: Dockerfile
+      args:
+        - BUILD_AUTHORS='Nemanja Mitic <me@nemanjamitic.com>'
+        # - BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+        - BUILD_DATE='2025-12-28T23:20:39Z'
+        - BUILD_SHA512SUM=7266fb1613adbe0d652497aa189fb1ab5d80fe7da7182c4365dd54f71c0f3248b750400a5049f2a63ab18df2ea4a7fad981ba7f3a1b24e5760adea76d1a527ca
+        - BUILD_VERSION=1839
+    # command: --skip-old-files php-fpm
     env_file:
       - .env
     # environment:
@@ -17,6 +26,8 @@ services:
     #   REDIS_HOST: redis
     volumes:
       - ./data/mybb-data:/var/www/html:rw
+      - ./conf/info.php:/var/www/html/info.php:ro
+      - ./conf/redis-session.ini:/usr/local/etc/php/conf.d/redis-session.ini
     depends_on:
       - database
       - redis
@@ -26,7 +37,7 @@ services:
     container_name: mybb-nginx
     restart: unless-stopped
     volumes:
-      - ./data/nginx-data:/etc/nginx/conf.d:ro
+      - ./conf/nginx/default.conf:/etc/nginx/conf.d:ro
       - ./data/mybb-data:/var/www/html:ro
     depends_on:
       - mybb
@@ -66,6 +77,7 @@ services:
       - .env
     volumes:
       - ./data/mysql-data:/var/lib/mysql
+      - ./conf/mysql.cnf:/etc/mysql/conf.d/custom.cnf:ro
 
   redis:
     image: redis:7-alpine
