--- a/apps/mybb/docker-compose.yml
+++ b/apps/mybb/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         # - BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
         - BUILD_DATE='2025-12-28T23:20:39Z'
         - BUILD_SHA512SUM=7266fb1613adbe0d652497aa189fb1ab5d80fe7da7182c4365dd54f71c0f3248b750400a5049f2a63ab18df2ea4a7fad981ba7f3a1b24e5760adea76d1a527ca
-        - BUILD_VERSION=1839
+        - BUILD_VERSION='1.8.39'
     # command: --skip-old-files php-fpm
     env_file:
       - .env
