--- a/apps/mybb/conf/nginx.conf
+++ b/apps/mybb/conf/nginx.conf
@@ -20,7 +20,7 @@ server {
 
     location ~ \.php$ {
         try_files $uri =404;
-        fastcgi_pass 127.0.0.1:9000;  # Changed to localhost
+        fastcgi_pass mybb:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
