--- a/apps/mybb/docker-compose.yml
+++ b/apps/mybb/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./data/mybb-data:/var/www/html:ro
     depends_on:
+      - default
       - mybb
     networks:
       - proxy
