add default network

--- a/apps/mybb/docker-compose.yml
+++ b/apps/mybb/docker-compose.yml
@@ -110,5 +110,7 @@ services:
       - 'traefik.http.services.mybb-adminer.loadbalancer.server.port=8080'
 
 networks:
+  default:
+    internal: true
   proxy:
     external: true
