--- a/apps/mybb/docker-compose.yml
+++ b/apps/mybb/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     depends_on:
       - database
       - redis
+    networks:
+      - default
     # Note: use image, comment out build section to avoid building locally
     # build:
     #   context: ./docker
@@ -79,6 +81,8 @@ services:
     volumes:
       - ./data/mysql-data:/var/lib/mysql
       - ./conf/mysql.cnf:/etc/mysql/conf.d/custom.cnf:ro
+    networks:
+      - default
 
   redis:
     image: redis:7-alpine
@@ -86,6 +90,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./data/redis-data:/data
+    networks:
+      - default
 
   adminer:
     image: adminer:5.4.0-standalone
