--- a/apps/mybb/conf/nginx.conf
+++ b/apps/mybb/conf/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name _;
-    
+
     root /var/www/html;
     index index.php index.html;
 
@@ -12,7 +12,8 @@ server {
         try_files $uri $uri/ /index.php?$args;
     }
 
-    location ~ ^/(images|cache|jscripts|uploads)/ {
+    # Serve static files
+    location ~ ^/(images|cache|jscripts|uploads|styles|js)/ {
         access_log off;
         expires 30d;
         try_files $uri =404;
@@ -30,4 +31,3 @@ server {
         deny all;
     }
 }
-
