add second hostname var

--- a/apps/mybb/.env.example
+++ b/apps/mybb/.env.example
@@ -1,5 +1,8 @@
 # Traefik
+# For Nginx, main site
 SITE_HOSTNAME=rpi.varalicar.rs
+# For other services, adminer
+SITE_HOSTNAME_2=rpi.varalicar.rs
 
 # MyBB and DB
 DB_HOST=database
