add mybb to external network

--- a/apps/mybb/docker-compose.yml
+++ b/apps/mybb/docker-compose.yml
@@ -23,11 +23,10 @@ services:
     depends_on:
       - database
       - redis
+    # needs external network for smtp
     networks:
       - default
-    dns:
-      - 1.1.1.1
-      - 8.8.8.8
+      - proxy
     # Note: use image, comment out build section to avoid building locally
     # build:
     #   context: ./docker
