update nginx.conf to forward client IP from Traefik

--- a/apps/mybb/conf/nginx.conf
+++ b/apps/mybb/conf/nginx.conf
@@ -8,6 +8,18 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    # -------------------------------------------------
+    # TRUST TRAEFIK FOR REAL CLIENT IP
+    # -------------------------------------------------
+    # Traefik container IP
+    # 172.16.0.0 - 172.31.255.255
+    set_real_ip_from 172.16.0.0/12;
+
+    # Use forwarded headers from Traefik
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+    # -------------------------------------------------
+
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
@@ -21,9 +33,20 @@ server {
 
     location ~ \.php$ {
         try_files $uri =404;
+
         fastcgi_pass mybb:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+        # -------------------------------------------------
+        # PASS REAL IP TO PHP / MYBB
+        # -------------------------------------------------
+        fastcgi_param REMOTE_ADDR $remote_addr;
+        fastcgi_param HTTP_X_REAL_IP $remote_addr;
+        fastcgi_param HTTP_X_FORWARDED_FOR $proxy_add_x_forwarded_for;
+        fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
+        # -------------------------------------------------
+
         include fastcgi_params;
     }
 
